# P1.1

./: readme.rst
D1-exercise/: my_solutions  solutions
D3-exercise/: problems.py  problems.py~  readme.md
D4-exercise/landcover/: README.rst
D5-assignment/: README.rst  conf_main.py  main.py  steppers.py
D5-assignment/sphinxdoc/: Makefile  conf.py  index.rst
D6-codes/C_codes/: DoStuff.c  DoStuff_macro.c  Multiply.c  Multiply_dangerous.c  arguments.c  bitfields.c  break.c  continue.c  enum_week.c  function_pointer.c  library_function.c  memory_leak.c  multidimesional_arrays.c  multidimesional_arrays_contiguous.c  multidimesional_arrays_contiguous2.c  pointer_and_scope.c  pointer_arithmetic.c  preprocessor_macro.c  struct_pointer.c  union.c
D6-codes/Compiled_languages/: demo.c
D6-exercise/: matrix_mult.f90  mm_mult.c  readme.rst
D7-codes/Basic_debugging/: ex03.f90  readme.md
D7-codes/Fortran_codes/: Format.f90  Func_contains.f90  Func_external.f90  Func_interface.f90  IntegerDivsion.f90  array_operations.f90  derived_data_types.f90  dynamic_arrays.f90  functions_arguments.f90  my_module.f90  namelist.f90  readwrite.f90  recursive.f90  subroutine.f90  subroutine_intent.f90  usemodule.f90  usemodule_only.f90  writetoFile.f90
D7-exercise/: readme.rst
D8-assignment/: D8-assignment.rst  Makefile  README.rst  cfunc.c  first_task.c  first_task.f90  msub.f90  second_task.f90
D8-assignment/CMake_Folder/: CMakeLists.txt  README.rst  cfunc.c  first_task.c  second_task.F90  second_task.f90
D8_codes/Mixing_C_Fortran_codes/: axpy.c  axpy.f90  call_axpy.c  call_axpy.f90  (+6 more)
(+33 files in other folders)
